--- a/admin/admin1.html
+++ b/admin/admin1.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="admin1.css">
+    <link rel="stylesheet" href="./admin_css/common_sidebar.css">
+    <link rel="stylesheet" href="./admin_css/admin1.css">
 </head>
 
 <body>
@@ -16,36 +17,36 @@
         <header>
 
             <div class="logo">
-                <img src="./img/profix.jpg" alt="" />
+                <img src="../img/profix.jpg" alt="" />
             </div>
 
             <nav>
                 <ul class="admin_menu_list">
                     <li>
-                        <img src="img/checklist.png" class="link_icon" alt="" />
+                        <img src="../img/checklist.png" class="link_icon" alt="" />
                         <a href="admin1.html">OrderList </a>
                     </li>
                     <li>
-                        <img src="img/plus.png" class="link_icon" alt="" />
+                        <img src="../img/plus.png" class="link_icon" alt="" />
                         <a href="admin2.html">Add Service </a>
                     </li>
                     <li>
-                        <img src="img/add_admin.png" class="link_icon" alt="" />
-                        <a href="">Make Admin </a>
+                        <img src="../img/add_admin.png" class="link_icon" alt="" />
+                        <a href="admin3.html">Make Admin </a>
                     </li>
                     <li>
-                        <img src="img/edit.png" class="link_icon" alt="" />
-                        <a href="">Manage Services </a>
+                        <img src="../img/edit.png" class="link_icon" alt="" />
+                        <a href="admin4.html">Manage Services </a>
                     </li>
                     <li>
-                        <img src="img/logout.png" class="link_icon" alt="" />
-                        <a href="">Log-out </a>
+                        <img src="../img/logout.png" class="link_icon" alt="" />
+                        <a href="../index.html">Log-out </a>
                     </li>
                 </ul>
             </nav>
 
             <h4 class="home_link">
-                <a href="">Go To WebPage</a>
+                <a href="../index.html">Go To WebPage</a>
             </h4>
         </header>
 
