--- a/admin/2_Add_Service.html
+++ b/admin/2_Add_Service.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Service</title>
     <link rel="stylesheet" href="./admin_css/common_sidebar.css">
-    <link rel="stylesheet" href="./admin_css/admin2.css">
+    <link rel="stylesheet" href="./admin_css/2_add_service.css">
 </head>
 
 <body>
@@ -23,24 +23,24 @@
             <nav>
                 <ul class="admin_menu_list">
                     <li>
-                        <img src="../img/checklist.png" class="link_icon" alt="" />
-                        <a href="admin1.html">OrderList </a>
+                        <img src="../img/admin/checklist.png" class="link_icon" alt="" />
+                        <a href="1_Oreder_List.html">OrderList</a>
                     </li>
                     <li>
-                        <img src="../img/plus.png" class="link_icon" alt="" />
-                        <a href="admin2.html">Add Service </a>
+                        <img src="../img/admin/plus.png" class="link_icon" alt="" />
+                        <a href="2_Add_Service.html">Add Service</a>
                     </li>
                     <li>
-                        <img src="../img/add_admin.png" class="link_icon" alt="" />
-                        <a href="admin3.html">Make Admin </a>
+                        <img src="../img/admin/add_admin.png" class="link_icon" alt="" />
+                        <a href="3_Make_Admin.html">Make Admin</a>
                     </li>
                     <li>
-                        <img src="../img/edit.png" class="link_icon" alt="" />
-                        <a href="admin4.html">Manage Services </a>
+                        <img src="../img/admin/edit.png" class="link_icon" alt="" />
+                        <a href="4_Manage_Services.html">Manage Services</a>
                     </li>
                     <li>
-                        <img src="../img/logout.png" class="link_icon" alt="" />
-                        <a href="../index.html">Log-out </a>
+                        <img src="../img/admin/logout.png" class="link_icon" alt="" />
+                        <a href="../index.html">Log-out</a>
                     </li>
                 </ul>
             </nav>
@@ -74,7 +74,7 @@
 
                         <label>Add Book Cover Photo</label>
                         <label for="file" class="inputFileLabel">
-                            <img src="./img/upload.png" alt="" />
+                            <img src="../img/admin/upload.png" alt="" />
                             Upload image</label>
                         <input id="file" type="file" required class="inputFile" accept="image/*" />
                     </div>
