--- a/admin/4_Manage_Services.html
+++ b/admin/4_Manage_Services.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Manage Services</title>
     <link rel="stylesheet" href="./admin_css/common_sidebar.css">
-    <link rel="stylesheet" href="./admin_css/admin1.css">
+    <link rel="stylesheet" href="./admin_css/1_order_list.css">
 </head>
 
 <body>
@@ -23,24 +23,24 @@
             <nav>
                 <ul class="admin_menu_list">
                     <li>
-                        <img src="../img/checklist.png" class="link_icon" alt="" />
-                        <a href="admin1.html">OrderList </a>
+                        <img src="../img/admin/checklist.png" class="link_icon" alt="" />
+                        <a href="1_Oreder_List.html">OrderList</a>
                     </li>
                     <li>
-                        <img src="../img/plus.png" class="link_icon" alt="" />
-                        <a href="admin2.html">Add Service </a>
+                        <img src="../img/admin/plus.png" class="link_icon" alt="" />
+                        <a href="2_Add_Service.html">Add Service</a>
                     </li>
                     <li>
-                        <img src="../img/add_admin.png" class="link_icon" alt="" />
-                        <a href="admin3.html">Make Admin </a>
+                        <img src="../img/admin/add_admin.png" class="link_icon" alt="" />
+                        <a href="3_Make_Admin.html">Make Admin</a>
                     </li>
                     <li>
-                        <img src="../img/edit.png" class="link_icon" alt="" />
-                        <a href="admin4.html">Manage Services </a>
+                        <img src="../img/admin/edit.png" class="link_icon" alt="" />
+                        <a href="4_Manage_Services.html">Manage Services</a>
                     </li>
                     <li>
-                        <img src="../img/logout.png" class="link_icon" alt="" />
-                        <a href="../index.html">Log-out </a>
+                        <img src="../img/admin/logout.png" class="link_icon" alt="" />
+                        <a href="../index.html">Log-out</a>
                     </li>
                 </ul>
             </nav>
@@ -55,7 +55,7 @@
         <main class="heading_area">
 
             <div class="heading_title">
-                <h2>Order List</h2>
+                <h2>Manage Services</h2>
                 <h3>Admin Name</h3>
             </div>
 
@@ -81,7 +81,7 @@
                             <td>safu@gmail.com</td>
                             <td>Mobile Servicing</td>
                             <td>Credit card</td>
-                            <td><img src="../img/delete.png" alt=""></td>
+                            <td><img src="../img/admin/delete.png" alt=""></td>
                         </tr>
 
                     </tbody>
