--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <h2>
         <a href="admin/1_Oreder_List.html">Admin</a>
-        <a href="client/1_Booking.html">Client</a>
+        <a href="client/1_Service.html">Client</a>
     </h2>
     
 </body>
