--- a/admin/2_Add_Service.html
+++ b/admin/2_Add_Service.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Service</title>
-    <link rel="stylesheet" href="./admin_css/common_sidebar.css">
-    <link rel="stylesheet" href="./admin_css/2_add_service.css">
+    <link rel="stylesheet" href="../css/common_sidebar.css">
+    <link rel="stylesheet" href="../css/admin_css/2_add_service.css">
 </head>
 
 <body>
@@ -23,32 +23,27 @@
             <nav>
                 <ul class="admin_menu_list">
                     <li>
-                        <img src="../img/admin/checklist.png" class="link_icon" alt="" />
+                        <img src="../img/admin/checklist.png" class="admin_link_icon" alt="" />
                         <a href="1_Oreder_List.html">OrderList</a>
                     </li>
                     <li>
-                        <img src="../img/admin/plus.png" class="link_icon" alt="" />
+                        <img src="../img/admin/plus.png" class="admin_link_icon" alt="" />
                         <a href="2_Add_Service.html">Add Service</a>
                     </li>
                     <li>
-                        <img src="../img/admin/add_admin.png" class="link_icon" alt="" />
+                        <img src="../img/admin/add_admin.png" class="admin_link_icon" alt="" />
                         <a href="3_Make_Admin.html">Make Admin</a>
                     </li>
                     <li>
-                        <img src="../img/admin/edit.png" class="link_icon" alt="" />
+                        <img src="../img/admin/edit.png" class="admin_link_icon" alt="" />
                         <a href="4_Manage_Services.html">Manage Services</a>
                     </li>
                     <li>
-                        <img src="../img/admin/logout.png" class="link_icon" alt="" />
+                        <img src="../img/admin/logout.png" class="admin_link_icon" alt="" />
                         <a href="../index.html">Log-out</a>
                     </li>
                 </ul>
-            </nav>
-
-            <h4 class="home_link">
-                <a href="../index.html">Go To WebPage</a>
-            </h4>
-            
+            </nav>            
         </header>
 
 
@@ -57,7 +52,7 @@
 
             <div class="heading_title">
                 <h2>Add Service</h2>
-                <h3>Admin Name</h3>
+                <h3 class="admin_name">Admin Name</h3>
             </div>
 
             <!-- Another Section -->
