--- a/client/3_Review.html
+++ b/client/3_Review.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Review</title>
     <link rel="stylesheet" href="../css/common_sidebar.css">
-    <link rel="stylesheet" href="../css/client_css/3_review.css">
+    <link rel="stylesheet" href="../css/client_css/1_service.css">
 </head>
 
 <body>
@@ -52,12 +52,15 @@
             </div>
 
             <!-- Another Section -->
-            <section class="interaction_area review_area">
+            <section class="interaction_area">
 
-                <input type="text" placeholder="Your name" required class="review_input"/>
-                <input type="text" placeholder="Company Name" required class="review_input"/>
-                <textarea name="" id="" rows="10" cols="40" class="review_input">Description</textarea>
-                <button class="btn_submit" type="submit">Submit</button>
+                <form action="" class="review_area">
+
+                    <input type="text" placeholder="Your name" required class="user_input" />
+                    <input type="text" placeholder="Company Name" required class="user_input" />
+                    <textarea name="" id="" rows="10" cols="40" class="user_input">Description</textarea>
+                    <button class="btn_submit" type="submit">Submit</button>
+                </form>
 
 
             </section>
