--- a/admin/3_Make_Admin.html
+++ b/admin/3_Make_Admin.html
@@ -58,18 +58,20 @@
 
                 <div class="admin_making_area">
 
-                    <div class="input_flex">
-                        <label htmlFor="admin_email">Email</label>
-                        <input id="admin_email" type="text" required placeholder="jon@gmail.com" />
-                    </div>
+                    <div class="admin_making_input">
+                        <div class="input_flex">
+                            <label htmlFor="admin_email">Email</label>
+                            <input id="admin_email" type="text" required placeholder="jon@gmail.com" />
+                        </div>
 
-                    <div>
-                        <button class="btn_submit" type="submit">Submit</button>
+                        <div>
+                            <button class="btn_submit" type="submit">Submit</button>
+                        </div>
                     </div>
                 </div>
             </section>
         </main>
-        
+
     </div>
 </body>
 
