index page working...

--- a/index.html
+++ b/index.html
@@ -5,19 +5,163 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index Page</title>
+    <link rel="shortcut icon" href="/CODE/fab1.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/1f45fef13f.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 
-    <h1>Hello...</h1>
+    <div class="main_container">
 
-    <h2>
-        <a href="admin/1_Oreder_List.html">Admin</a>
-        <a href="client/1_Service.html">Client</a>
-    </h2>
-    
+        <header>
+            <div class="logo">
+                <img src="img/profix.jpg" alt="">
+            </div>
+
+            <input type="checkbox" id="check_box">
+            <label class="check_box_label" for="check_box">
+                <i class="fas fa-bars"></i>
+            </label>
+
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="admin/1_Oreder_List.html">Admin</a></li>
+                    <li><a href="login.html" class="active">Login</a></li>
+                </ul>
+            </nav>
+        </header>
+
+
+        <!-- ####################### -->
+        <!-- Section 1 : Banner Area -->
+        <!-- ####################### -->
+        <section class="banner_area">
+
+            <div class="title_box">
+
+                <h1>
+                    We Fix <br> Your Electronic Problem
+                </h1>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, delectus ipsa recusandae molestias
+                    nulla sit numquam laboriosam magnam porro explicabo?</p>
+
+                <button>Service</button>
+            </div>
+
+            <div class="image_box">
+                <img src="./img/baner1.jpg" alt="">
+            </div>
+        </section>
+
+
+
+        <!-- ################################ -->
+        <!-- Section 2 : Running Service Area -->
+        <!-- ################################ -->
+        <section class="running_service_area">
+
+            <div class="static_title">
+                <h4>Running Services</h4>
+                <h5>Discover out running services which may helpful for you</h5>
+            </div>
+
+            <div class="service_thumbnail_container">
+
+                <div class="service_thumbnail hover_effect">
+                    <figure><img src="./img/mobile1.jpg" alt=""></figure>
+                    <p class="title">
+                        Smart Phone Servicing
+                    </p>
+                    <p> Dhaka, Bangladesh</p>
+                </div>
+
+                <div class="service_thumbnail hover_effect">
+                    <figure><img src="./img/laptop.jpeg" alt=""></figure>
+                    <p class="title">
+                        Laptop Servicing
+                    </p>
+                    <p> Dhaka, Bangladesh</p>
+                </div>
+
+                <div class="service_thumbnail hover_effect">
+                    <figure> <img src="./img/mobile3.jpg" alt=""></figure>
+                    <p class="title">
+                        Smart Phone Servicing
+                    </p>
+                    <p> Dhaka, Bangladesh</p>
+                </div>
+            </div>
+        </section>
+
+
+
+
+        <!-- ######################## -->
+        <!-- Section 3 : Service Area -->
+        <!-- ######################## -->
+        <section class="service_area">
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- ######################## -->
+        <!-- Section 4 :  -->
+        <!-- ######################## -->
+        <section class="service_area">
+
+        </section>
+        <!-- ######################## -->
+        <!-- Section 5 :  -->
+        <!-- ######################## -->
+        <section class="service_area">
+
+        </section>
+        <!-- ######################## -->
+        <!-- Section 6 :  -->
+        <!-- ######################## -->
+        <section class="service_area">
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- Main Container End -->
+    </div>
 </body>
 
 </html>
