service section ok

--- a/index.html
+++ b/index.html
@@ -109,38 +109,68 @@
         <!-- ######################## -->
         <section class="service_area">
 
+            <div class="static_title service_title">
+                <h4>Services</h4>
+                <h5>We are an agency to give you <br> all kind of digital electronic supports</h5>
+            </div>
+
+            <div class="service_container">
+
+                <div class="service_card">
+                    <img src="img/services/laptop.png" alt="">
+                    <p>Laptop Servicing</p>
+                    <p class="service_price">$299</p>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, hic.</p>
+                </div>
+                <div class="service_card">
+                    <img src="img/services/motherboard.png" alt="">
+                    <p>Motherboard Servicing</p>
+                    <p class="service_price">$299</p>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, hic.</p>
+                </div>
+                <div class="service_card">
+                    <img src="img/services/repair.png" alt="">
+                    <p>Phone Servicing</p>
+                    <p class="service_price">$299</p>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, hic.</p>
+                </div>
+
+                <div class="service_card">
+                    <img src="img/services/sound-card.png" alt="">
+                    <p>Sound Card Servicing</p>
+                    <p class="service_price">$299</p>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, hic.</p>
+                </div>
+
+            </div>
+
+            <div>
+                <button>Explore More</button>
+            </div>
         </section>
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
         <!-- ######################## -->
-        <!-- Section 4 :  -->
+        <!-- Section 4 :  User Review -->
         <!-- ######################## -->
-        <section class="service_area">
+        <section class="">
+
 
         </section>
+
+
         <!-- ######################## -->
         <!-- Section 5 :  -->
         <!-- ######################## -->
-        <section class="service_area">
+        <section class="">
 
         </section>
         <!-- ######################## -->
         <!-- Section 6 :  -->
         <!-- ######################## -->
-        <section class="service_area">
+        <section class="">
 
         </section>
 
