Review Section ==> OK

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index Page</title>
-    <link rel="shortcut icon" href="/CODE/fab1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/fab1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/1f45fef13f.js" crossorigin="anonymous"></script>
 
@@ -155,9 +155,119 @@
         <!-- ######################## -->
         <!-- Section 4 :  User Review -->
         <!-- ######################## -->
-        <section class="">
+        <section class="user_review_area">
 
+            <h2>Our Clients Reviews</h2>
 
+            <div class="user_review_card_container">
+
+                <div class="user_review_card">
+
+                    <div class="user_box">
+
+                        <div class="user_img">
+                            <img src="./img/user_img/man1.jpg" alt="">
+                        </div>
+
+                        <div class="user_info">
+                            <h3>Farhan Khan</h3>
+                            <h5>CEO, IT Soft</h5>
+                        </div>
+                    </div>
+
+                    <div class="user_review">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, enim suscipit? Veniam
+                            dolorum
+                            earum cum doloribus iste voluptate tempore voluptatibus.</p>
+                    </div>
+                    <div class="user_rating">
+                        <img src="img/star.png" alt="">
+                        <img src="img/star.png" alt="">
+                        <img src="img/star.png" alt="">
+                    </div>
+
+                </div>
+
+                <div class="user_review_card">
+
+                    <div class="user_box">
+
+                        <div class="user_img">
+                            <img src="./img/user_img/woman1.jpg" alt="">
+                        </div>
+
+                        <div class="user_info">
+                            <h3>Farhan Khan</h3>
+                            <h5>CEO, IT Soft</h5>
+                        </div>
+                    </div>
+
+                    <div class="user_review">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, enim suscipit? Veniam
+                            dolorum
+                            earum cum doloribus iste voluptate tempore voluptatibus.</p>
+                    </div>
+                    <div class="user_rating">
+                        <img src="img/star.png" alt="">
+                        <img src="img/star.png" alt="">
+                        <img src="img/star.png" alt="">
+                        <img src="img/star.png" alt="">
+                        <img src="img/star.png" alt="">
+                    </div>
+                </div>
+
+                <div class="user_review_card">
+
+                    <div class="user_box">
+
+                        <div class="user_img">
+                            <img src="./img/user_img/man2.jpg" alt="">
+                        </div>
+
+                        <div class="user_info">
+                            <h3>Farhan Khan</h3>
+                            <h5>CEO, IT Soft</h5>
+                        </div>
+                    </div>
+
+                    <div class="user_review">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, enim suscipit? Veniam
+                            dolorum
+                            earum cum doloribus iste voluptate tempore voluptatibus.</p>
+                    </div>
+                    <div class="user_rating">
+                        <img src="img/star.png" alt="">
+                        <img src="img/star.png" alt="">
+                        <img src="img/star.png" alt="">
+                        <img src="img/star.png" alt="">
+                    </div>
+                </div>
+
+                <div class="user_review_card">
+                    <div class="user_box">
+                        <div class="user_img">
+                            <img src="./img/user_img/woman2.jpg" alt="">
+                        </div>
+
+                        <div class="user_info">
+                            <h3>Farhan Khan</h3>
+                            <h5>CEO, IT Soft</h5>
+                        </div>
+                    </div>
+
+                    <div class="user_review">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, enim suscipit? Veniam
+                            dolorum
+                            earum cum doloribus iste voluptate tempore voluptatibus.</p>
+                    </div>
+                    <div class="user_rating">
+                        <img src="img/star.png" alt="">
+                        <img src="img/star.png" alt="">
+                        <img src="img/star.png" alt="">
+                    </div>
+                </div>
+
+            </div>
         </section>
 
 
