--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                             earum cum doloribus iste voluptate tempore voluptatibus.</p>
                     </div>
                     <div class="user_rating">
-                        <img src="img/star.png" alt="">
-                        <img src="img/star.png" alt="">
-                        <img src="img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
                     </div>
 
                 </div>
@@ -208,11 +208,11 @@
                             earum cum doloribus iste voluptate tempore voluptatibus.</p>
                     </div>
                     <div class="user_rating">
-                        <img src="img/star.png" alt="">
-                        <img src="img/star.png" alt="">
-                        <img src="img/star.png" alt="">
-                        <img src="img/star.png" alt="">
-                        <img src="img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
                     </div>
                 </div>
 
@@ -236,10 +236,10 @@
                             earum cum doloribus iste voluptate tempore voluptatibus.</p>
                     </div>
                     <div class="user_rating">
-                        <img src="img/star.png" alt="">
-                        <img src="img/star.png" alt="">
-                        <img src="img/star.png" alt="">
-                        <img src="img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
                     </div>
                 </div>
 
@@ -261,9 +261,9 @@
                             earum cum doloribus iste voluptate tempore voluptatibus.</p>
                     </div>
                     <div class="user_rating">
-                        <img src="img/star.png" alt="">
-                        <img src="img/star.png" alt="">
-                        <img src="img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
+                        <img src="./img/star.png" alt="">
                     </div>
                 </div>
 
