--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
 
                 <div class="service_thumbnail hover_effect">
-                    <figure> <img src="./img/mobile3.jpg" alt=""></figure>
+                    <figure> <img src="./img/mobile2.jpg" alt=""></figure>
                     <p class="title">
                         Smart Phone Servicing
                     </p>
@@ -274,13 +274,19 @@
         <!-- ######################## -->
         <!-- Section 5 :  -->
         <!-- ######################## -->
-        <section class="">
+        <section class="map_area">
+
 
         </section>
+
+
+
+
         <!-- ######################## -->
         <!-- Section 6 :  -->
         <!-- ######################## -->
-        <section class="">
+        <section class="footer_area">
+
 
         </section>
 
