--- a/index.html
+++ b/index.html
@@ -272,13 +272,16 @@
 
 
         <!-- ######################## -->
-        <!-- Section 5 :  -->
+        <!-- Section 5 : Map Area     -->
         <!-- ######################## -->
         <section class="map_area">
 
             <!-- https://www.maps.ie/create-google-map -->
 
-            <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Dhaka+(Our%20Location)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://www.maps.ie/draw-radius-circle-map/"> </a></div>
+            <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
+                    marginwidth="0"
+                    src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Dhaka+(Our%20Location)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
+                    href="https://www.maps.ie/draw-radius-circle-map/"> </a></div>
 
         </section>
 
@@ -286,28 +289,69 @@
 
 
         <!-- ######################## -->
-        <!-- Section 6 :  -->
+        <!-- Section 6 : Footer Area  -->
         <!-- ######################## -->
         <section class="footer_area">
 
+            <div class="details_info">
+
+                <div class="location">
+                    <div class="map_logo">
+                        <img src="" alt="">
+                    </div>
+                    <div class="address">
+                        <p>H#095 (1st Floor), Road #15</p>
+                        <p>Humaion Road, Mohammadpur, Dhaka, Bangladesh</p>
+                    </div>
+                </div>
+
+                <div class="pages">
+                    <h2>Company</h2>
+                    <div class="links">
+                        <ul>
+                            <li>About</li>
+                            <li>Project</li>
+                            <li>Our Team</li>
+                            <li>Terms Conditions</li>
+                            <li>Submit Listing</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="pages">
+                    <h2>Quick Links</h2>
+                    <div class="links">
+                        <ul>
+                            <li>Quick Links</li>
+                            <li>Rentals</li>
+                            <li>Sales</li>
+                            <li>Contact</li>
+                            <li>Our Blog</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="about_us">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi voluptas totam dolorem iste,
+                        libero consectetur.</p>
+
+                    <div class="social_icons">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="copyright">
+                <p>Copyright ProFix | 2021</p>
+            </div>
+
 
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         <!-- Main Container End -->
     </div>
